--- a/src/main/resources/assets/aquamirae/lang/en_us.json
+++ b/src/main/resources/assets/aquamirae/lang/en_us.json
@@ -53,6 +53,7 @@
   "ability.three_bolt_armor_full": "Full-Set Ability>Protects you from freezing>in the waters of the Ice Maze.",
   "ability.three_bolt_armor_half": "Half-Set Ability>Works with helmet and suit>only: the suit provides>you with oxygen underwater.",
   "ability.whisper_of_the_abyss": "Perforation>Reduces the target's>armor by 10% for #1s§7.>Stacks up to 5 times.",
+  "ability.coral_lance": "Suppression>You deal #1%§7 more damage>to Ship Graveyard creatures.",
 
   "tooltip.lore.frozen_key": "Opens a chest hidden>in the depths of the>Ice Maze.",
   "tooltip.lore.golden_moth_in_a_jar": "Some treasures can>have their own souls,>not only devour others...",
@@ -193,11 +194,17 @@
   "entity.aquamirae.spinefish": "Spinefish",
 
   "effect.aquamirae.abyss_blindness": "Blindness",
+  "effect.aquamirae.abyss_blindness.description": "Blinding Abyss armor effect. Decreases movement speed.",
   "effect.aquamirae.armor_decrease": "§cPerforation",
+  "effect.aquamirae.armor_decrease.description": "Whisper of the Abyss effect. Reduces armor value.",
   "effect.aquamirae.crystallization": "§cCrystallization",
+  "effect.aquamirae.crystallization.description": "Blinding Abyss armor effect. You deal 80% less damage and die when the effect ends.",
   "effect.aquamirae.health_decrease": "§cDivide",
+  "effect.aquamirae.health_decrease.description": "Divider effect. Reduces max health.",
   "effect.aquamirae.strong_armor": "Strong Armor",
+  "effect.aquamirae.strong_armor.description": "Blinding Abyss armor effect. Increases armor value.",
   "effect.aquamirae.swim_speed": "Speed",
+  "effect.aquamirae.swim_speed.description": "Terrible armor effect. Increases underwater movement speed.",
 
   "death.attack.crystallization": "%1$s has been turned into a crystal",
 
