--- a/src/main/resources/assets/aquamirae/lang/zh_cn.json
+++ b/src/main/resources/assets/aquamirae/lang/zh_cn.json
@@ -169,13 +169,13 @@
     "block.aquamirae.oxygelium_bud_rare": "氧化凝胶芽",
     "block.aquamirae.oxygelium_stem": "氧化凝胶茎",
     "block.aquamirae.painting_anglerfish": "画",
-    "block.aquamirae.painting_anglerfish_desc": "非常好鮟鱇鱼，爱来自Obscuria",
+    "block.aquamirae.painting_anglerfish_desc": "鮟鱇鱼，作者：Obscuria",
     "block.aquamirae.painting_aurora": "画",
-    "block.aquamirae.painting_aurora_desc": "非常好极光，爱来自Obscuria",
+    "block.aquamirae.painting_aurora_desc": "极光，作者：Obscuria",
     "block.aquamirae.painting_oxygelium": "画",
-    "block.aquamirae.painting_oxygelium_desc": "非常好氧化凝胶，爱来自Obscuria",
+    "block.aquamirae.painting_oxygelium_desc": "氧化凝胶，作者：Obscuria",
     "block.aquamirae.painting_tortured_soul": "画",
-    "block.aquamirae.painting_tortured_soul_desc": "非常折磨的灵魂，恨来自Obscuria",
+    "block.aquamirae.painting_tortured_soul_desc": "被折磨的灵魂，作者：Obscuria",
     "block.aquamirae.wisteria": "紫藤",
     "entity.aquamirae.anglerfish": "鮟鱇鱼",
     "entity.aquamirae.captain_cornelia": "§d船长科妮莉亚亡灵",
