--- a/src/main/resources/assets/aquamirae/lang/zh_cn.json
+++ b/src/main/resources/assets/aquamirae/lang/zh_cn.json
@@ -199,7 +199,7 @@
     "effect.aquamirae.strong_armor": "盔甲强化",
     "effect.aquamirae.strong_armor.description": "晦暗深海盔甲效果。增加盔甲值。",
     "effect.aquamirae.swim_speed": "水下速度",
-    "effect.aquamirae.swim_speed.description": "可怖盔甲小怪。增加水下移速。",
+    "effect.aquamirae.swim_speed.description": "可怖盔甲效果。增加水下移速。",
     "death.attack.crystallization": "%1$s被变成了水晶",
     "info.captain_spawn": "§d 船长科妮莉亚的亡灵被唤醒了！",
     "info.captain_spawn_fail": "§c 无事发生……",
@@ -209,7 +209,6 @@
     "perk.rune_of_the_storm.text": "风暴符文让你>在寒冷的生物群系中>多造成33%的伤害。",
     "subtitles.block.frozen_chest.unlock": "冰冻箱子：解锁",
     "subtitles.effect.oxygen": "氧气：减压",
-    "subtitles.entity.captain_cornelia.ambient": "",
     "subtitles.entity.captain_cornelia.attack_1": "科妮莉亚：进攻",
     "subtitles.entity.captain_cornelia.attack_2": "科妮莉亚：进攻",
     "subtitles.entity.captain_cornelia.death": "科妮莉亚：死亡",
