--- a/src/main/resources/assets/aquamirae/lang/zh_cn.json
+++ b/src/main/resources/assets/aquamirae/lang/zh_cn.json
@@ -88,7 +88,7 @@
     "item.aquamirae.eel_spawn_egg": "鳗鱼刷怪蛋",
     "item.aquamirae.esca": "海离精华",
     "item.aquamirae.fin": "鳍",
-    "item.aquamirae.fin_cutter": "罗非鱼",
+    "item.aquamirae.fin_cutter": "鳍制切割刀",
     "item.aquamirae.frozen_key": "冰冻钥匙",
     "item.aquamirae.golden_moth_spawn_egg": "金蛾刷怪蛋",
     "item.aquamirae.luminescent_bubble": "发光气泡",
