--- a/src/main/resources/assets/aquamirae/lang/zh_cn.json
+++ b/src/main/resources/assets/aquamirae/lang/zh_cn.json
@@ -124,7 +124,7 @@
     "item.aquamirae.three_bolt_leggings": "潜水护腿",
     "item.aquamirae.three_bolt_boots": "潜水靴子",
     "item.aquamirae.tortured_soul_spawn_egg": "被折磨的灵魂刷怪蛋",
-    "item.aquamirae.treasure_pouch": "爆炸袋",
+    "item.aquamirae.treasure_pouch": "宝藏袋",
     "item.aquamirae.whisper_of_the_abyss": "深渊之低语",
     "item.aquamirae.wisteria_niveis": "紫藤",
     "item.aquamirae.spinefish_bucket": "棘鱼桶",
