--- a/src/main/resources/assets/aquamirae/lang/zh_cn.json
+++ b/src/main/resources/assets/aquamirae/lang/zh_cn.json
@@ -162,8 +162,8 @@
     "block.aquamirae.elodea": "伊乐藻",
     "block.aquamirae.frozen_chest": "冰冻箱子",
     "block.aquamirae.golden_moth_in_a_jar": "金蛾罐子",
-    "block.aquamirae.luminescent_bubble": "发光气泡",
-    "block.aquamirae.luminescent_lamp": "发光灯",
+    "block.aquamirae.luminescent_bubble": "冷光气泡",
+    "block.aquamirae.luminescent_lamp": "冷光灯",
     "block.aquamirae.oxygelium_bud": "氧化凝胶芽",
     "block.aquamirae.oxygelium_bud_empty": "空的氧化凝胶芽",
     "block.aquamirae.oxygelium_bud_rare": "氧化凝胶芽",
