--- a/src/main/resources/assets/aquamirae/lang/en_us.json
+++ b/src/main/resources/assets/aquamirae/lang/en_us.json
@@ -56,22 +56,22 @@
   "ability.aquamirae.whisper_of_the_abyss": "Perforation>Reduces the target's>armor by 10% for #1s§7.>Stacks up to 5 times.",
   "ability.aquamirae.coral_lance": "Suppression>You deal #1%§7 more damage>to Ship Graveyard creatures.",
 
-  "tooltip.lore.frozen_key": "Opens a chest hidden>in the depths of the>Ice Maze.",
-  "tooltip.lore.golden_moth_in_a_jar": "Some treasures can>have their own souls,>not only devour others...",
-  "tooltip.lore.luminescent_bubble": "Increases the swimming speed>of nearby players. Place afloat>to build underwater roads.",
-  "tooltip.lore.luminescent_lamp": "Underwater light source.",
-  "tooltip.lore.material": "Material",
-  "tooltip.lore.pirate_pouch": "{I}Press {U} to open.>Forgotten pirate clothes that>smell like rotten oysters...",
-  "tooltip.lore.poseidons_breakfast": "Food of the Sea Gods.>§9Fury X (3:00)>§9Rush V (3:00)> >§5When Consumed:>§9+100% Ability Power>§9+50% Cooldown Reduction",
-  "tooltip.lore.rune_of_the_storm": "{I}Press {U} to use.>Attaches to the sword in>your off hand, increasing its>damage in cold biomes by 33%.",
-  "tooltip.lore.dead_sea_scroll": "{I}Press {U} to read.>§dUnknown effect",
-  "tooltip.lore.sea_casserole": "Is it looking at me?>§9Rush II (1:30)>§9Strength (0:30)> >§5When Consumed:>§9+20% Cooldown Reduction>§9+3 Attack Damage",
-  "tooltip.lore.sea_stew": "The power of the>sea in your stomach!>§9Fury III (2:00)>§9Strength (2:00)> >§5When Consumed:>§9+30% Ability Power>§9+3 Attack Damage",
-  "tooltip.lore.shell_horn": "{B}§dSummons Captain Cornelia.>Can be used near water>in an Ice Maze.",
-  "tooltip.lore.ship_graveyard_echo": "If you listen carefully, you can>hear the horns of hundreds of>ships lost in the Ice Maze...",
-  "tooltip.lore.treasure_pouch": "{I}Press {U} to open.>Once valuable loot, now>worthless trinkets under>the ice...",
-  "tooltip.lore.wisteria_niveis": "Even in the midst of an>icy wasteland, a wonderful>life can appear.>Can be placed.",
-  "tooltip.lore.oxygelium": "Can be placed.",
+  "lore.aquamirae.frozen_key": "Opens a chest hidden>in the depths of the>Ice Maze.",
+  "lore.aquamirae.golden_moth_in_a_jar": "Some treasures can>have their own souls,>not only devour others...",
+  "lore.aquamirae.luminescent_bubble": "Increases the swimming speed>of nearby players. Place afloat>to build underwater roads.",
+  "lore.aquamirae.luminescent_lamp": "Underwater light source.",
+  "lore.aquamirae.material": "Material",
+  "lore.aquamirae.pirate_pouch": "{I}Press {U} to open.>Forgotten pirate clothes that>smell like rotten oysters...",
+  "lore.aquamirae.poseidons_breakfast": "Food of the Sea Gods.>§9Fury X (3:00)>§9Rush V (3:00)> >§5When Consumed:>§9+100% Ability Power>§9+50% Cooldown Reduction",
+  "lore.aquamirae.rune_of_the_storm": "{I}Press {U} to use.>Attaches to the sword in>your off hand, increasing its>damage in cold biomes by 33%.",
+  "lore.aquamirae.dead_sea_scroll": "{I}Press {U} to read.>§dUnknown effect",
+  "lore.aquamirae.sea_casserole": "Is it looking at me?>§9Rush II (1:30)>§9Strength (0:30)> >§5When Consumed:>§9+20% Cooldown Reduction>§9+3 Attack Damage",
+  "lore.aquamirae.sea_stew": "The power of the>sea in your stomach!>§9Fury III (2:00)>§9Strength (2:00)> >§5When Consumed:>§9+30% Ability Power>§9+3 Attack Damage",
+  "lore.aquamirae.shell_horn": "{B}§dSummons Captain Cornelia.>Can be used near water>in an Ice Maze.",
+  "lore.aquamirae.ship_graveyard_echo": "If you listen carefully, you can>hear the horns of hundreds of>ships lost in the Ice Maze...",
+  "lore.aquamirae.treasure_pouch": "{I}Press {U} to open.>Once valuable loot, now>worthless trinkets under>the ice...",
+  "lore.aquamirae.wisteria_niveis": "Even in the midst of an>icy wasteland, a wonderful>life can appear.>Can be placed.",
+  "lore.aquamirae.oxygelium": "Can be placed.",
 
   "itemGroup.aquamirae": "Aquamirae",
   "item.aquamirae.abyssal_amethyst": "Abyssal Amethyst",
@@ -168,10 +168,7 @@
   "block.aquamirae.golden_moth_in_a_jar": "Golden Moth in a Jar",
   "block.aquamirae.luminescent_bubble": "Luminescent Bubble",
   "block.aquamirae.luminescent_lamp": "Luminescent Lamp",
-  "block.aquamirae.oxygelium_bud": "Oxygelium Bud",
-  "block.aquamirae.oxygelium_bud_empty": "Empty Oxygelium Bud",
-  "block.aquamirae.oxygelium_bud_rare": "Oxygelium Bud (Rare)",
-  "block.aquamirae.oxygelium_stem": "Oxygelium Stem",
+  "block.aquamirae.oxygelium": "Oxygelium",
   "block.aquamirae.painting_anglerfish": "Collectible Painting",
   "block.aquamirae.painting_anglerfish_desc": "Anglerfish by Obscuria",
   "block.aquamirae.painting_aurora": "Collectible Painting",
