--- a/src/main/resources/assets/aquamirae/lang/ko_kr.json
+++ b/src/main/resources/assets/aquamirae/lang/ko_kr.json
@@ -168,10 +168,7 @@
     "block.aquamirae.golden_moth_in_a_jar": "병 속에 든 황금 나방",
     "block.aquamirae.luminescent_bubble": "발광 거품",
     "block.aquamirae.luminescent_lamp": "발광 램프",
-    "block.aquamirae.oxygelium_bud": "옥시젤리움 싹",
-    "block.aquamirae.oxygelium_bud_empty": "빈 옥시젤리움 싹",
-    "block.aquamirae.oxygelium_bud_rare": "옥시젤리움 싹 (희귀)",
-    "block.aquamirae.oxygelium_stem": "옥시젤리움 줄기",
+    "block.aquamirae.oxygelium": "옥시젤리움",
     "block.aquamirae.painting_anglerfish": "수집 가능한 그림",
     "block.aquamirae.painting_anglerfish_desc": "Anglerfish by Obscuria",
     "block.aquamirae.painting_aurora": "수집 가능한 그림",
