--- a/src/main/resources/assets/aquamirae/lang/ru_ru.json
+++ b/src/main/resources/assets/aquamirae/lang/ru_ru.json
@@ -168,10 +168,7 @@
   "block.aquamirae.golden_moth_in_a_jar": "Золотой мотылёк в банке",
   "block.aquamirae.luminescent_bubble": "Люминесцентный пузырь",
   "block.aquamirae.luminescent_lamp": "Люминесцентная лампа",
-  "block.aquamirae.oxygelium_bud": "Бутон Кислородника",
-  "block.aquamirae.oxygelium_bud_empty": "Пустой бутон Кислородника",
-  "block.aquamirae.oxygelium_bud_rare": "Редкий бутон Кислородника",
-  "block.aquamirae.oxygelium_stem": "Стебель Кислородника",
+  "block.aquamirae.oxygelium": "Кислородник",
   "block.aquamirae.painting_anglerfish": "Коллекционная картина",
   "block.aquamirae.painting_anglerfish_desc": "Anglerfish by Obscuria",
   "block.aquamirae.painting_aurora": "Коллекционная картина",
