--- a/src/main/resources/assets/aquamirae/lang/zh_cn.json
+++ b/src/main/resources/assets/aquamirae/lang/zh_cn.json
@@ -168,10 +168,7 @@
     "block.aquamirae.golden_moth_in_a_jar": "金蛾罐子",
     "block.aquamirae.luminescent_bubble": "发光气泡",
     "block.aquamirae.luminescent_lamp": "发光灯",
-    "block.aquamirae.oxygelium_bud": "氧化凝胶芽",
-    "block.aquamirae.oxygelium_bud_empty": "空的氧化凝胶芽",
-    "block.aquamirae.oxygelium_bud_rare": "氧化凝胶芽",
-    "block.aquamirae.oxygelium_stem": "氧化凝胶茎",
+    "block.aquamirae.oxygelium": "氧化凝胶",
     "block.aquamirae.painting_anglerfish": "画",
     "block.aquamirae.painting_anglerfish_desc": "鮟鱇鱼，作者：Obscuria",
     "block.aquamirae.painting_aurora": "画",
